# BUGU_Temp

./: .gitmodules  README.md
data/back/bugu_DB/: bugu_DB.sql
data/embedded/: README.md
data/embedded/sdk/BUGU_HAL/: README.md
data/embedded/tools/Makefile/: Makefile
log/embedded/: README.md
log/embedded/25/ESP32_CmakeTemplateTest1/: .project
log/embedded/can/: can.md
log/embedded/chao/: 模板文件_框架模板设计_1.md  编译相关资料.md
log/embedded/yun/: OpenOCD使用方法.md  Preference_normal.md  README.md  TODO.md  一些概念说明.md  存储数据结构设计.md  开发规范(原).md  总体概念设计_1.md  项目模板.md
log/front/CEN/: README.md
log/front/sunshinegift/: README.md
preference/back/: BuguIndex.postman_collection.json  bugu.postman_collection.json
preference/embedded/: install.md
sunshinegift/: README.md
workspace/: README.md
workspace/back/buguIndex_go/: main.go
workspace/back/buguIndex_go/configs/: config.yaml
workspace/back/buguIndex_go/internal/dao/: dao.go  module.go  plugin.go
workspace/back/buguIndex_go/internal/middleware/: cors.go
workspace/back/buguIndex_go/internal/model/: model.go  module.go  plugin.go  user.go
workspace/back/buguIndex_go/internal/routers/: router.go
workspace/back/buguIndex_go/internal/service/: module.go  plugin.go  user.go
workspace/back/buguIndex_go/pkg/app/: app.go  form.go
workspace/back/bugu_back/: app.js  modules.d.ts  package-lock.json  package.json
workspace/back/bugu_back/config/: dbConfig.js
workspace/back/bugu_back/dao/: db.js  dbModel.js
workspace/back/bugu_back/dao/api/: chips.js  classes.js  components.js  data.js  engineerings.js  methods.js  userInfo.js
workspace/back/bugu_back/files/: Makefile  STM32F401CCUx_FLASH.ld  test.txt
workspace/back/bugu_back/files/Tools/: README.txt
workspace/back/bugu_back/files/desFiles/: des_50.json  des_69.json  des_88.json  des_90.json  des_template.json
workspace/back/bugu_back/files/exe/: README.md
workspace/back/bugu_back/files/source/: test.txt
workspace/back/bugu_back/public/: index.html
workspace/back/bugu_back/routes/: admin.js  chip.js  class.js  component.js  data.js  download.js  engineering.js  entrance.js  index.js  logic.js  method.js  projects.js  tree.js  userInfo.js
workspace/back/bugu_back/service/: cmd.js  compile.js  desFile.js  dirTest.js  init.js  proDir.js  test.js  tree.js
workspace/back/bugu_back/sql/: dbApi.js  dbConfig.js  json.js  sql.js
workspace/back/bugu_back/utils/: corsRequest.js  dao.js  errorLog.js  token.js
workspace/back/bugu_go/: Dockerfile  docker-compose.yml
workspace/back/bugu_go/configs/: config.yaml
workspace/back/bugu_go/internal/dao/: module.go  overload.go  plugin.go
workspace/back/bugu_go/internal/model/: auth.go  chip.go  module.go  overload.go  overload_input.go  overload_output.go  plugin.go
workspace/back/bugu_go/internal/service/: module.go  plugin.go
workspace/back/bugu_go/pkg/setting/: section.go  setting.go
workspace/embedded/: README.md
workspace/embedded/log/25/ESP32_CmakeTemplateTest1/: .cproject  CMakeLists.txt  sdkconfig.old
workspace/embedded/log/yun/: 存储数据结构设计.md  实现功能.md  总体概念设计.md  描述文件.md
workspace/embedded/template/: README.md
workspace/embedded/test/CMake_test/: .mxproject  CMakeLists.txt  CMake_test.ioc  Makefile  README.md
workspace/embedded/test/CMake_test/Core/Src/: main.c
workspace/embedded/test/CMake_test/Drivers/STM32F4xx_HAL_Driver/: CMakeLists.txt
workspace/embedded/test/CMake_test/cmake/: gcc-arm-none-eabi.cmake  stm32-gcc-flags.cmake  target-def.cmake
workspace/embedded/test/Demo_Test_1/: README.md  Test.ld  Testfile
workspace/embedded/test/Make_HT32_Test_1/: Makefile
workspace/embedded/test/Make_STM32_Test_1/: Makefile  README.md  STM32F401CCUx_FLASH.ld  STM32F411CEUx_FLASH.ld
workspace/embedded/test/Make_STM32_Test_1/Core/: README.md
workspace/embedded/test/Testdata/: TestSDK.c  TestSDK.h
workspace/front/bugu_front/: .eslintrc.js  ProblemsRecord.md  README.md  package-lock.json  package.json  record.md  vue.config.js
workspace/front/bugu_front/src/: App.vue  main.js
workspace/front/log/: README.md
workspace/front/log/WPO_Front/: vueRecord.md
(+229 files in other folders)
